--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,11 +25,11 @@
     <string name="settings_btn">Settings</string>
     <string name="settings_fact_type_title">Fun Fact Type</string>
 
-    <string name="fact_type_android">Android</string>
+    <string name="quote_type">Encouragement Quotes</string>
     <string name="fact_type_california">California</string>
 
     <!--Shared Preference Keys -->
-    <string name="preference_fact_type_key">fact_type_pref</string>
+    <string name="preference_quotes_key">quotes_pref</string>
 
     <!--Habits list page -->
     <string name="habit">Habit</string>
