--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="login_prompt">Please login</string>
     <string name="login_button_text">Login</string>
     <string name="logout_button_text">Logout</string>
+    <string name="view_list_button_text">Habit List</string>
     <string name="login_unsuccessful_msg">Login unsuccessful</string>
 
     <string name="welcome_message">It\'s currently %1$s.</string>
@@ -31,6 +32,8 @@
     <!--Shared Preference Keys -->
     <string name="preference_fact_type_key">fact_type_pref</string>
 
+    <!--Action Button-->
+    <string name="action_save">Save</string>
     <!--Habits list page -->
     <string name="habit">Habit</string>
     <string name="progress">Progress</string>
@@ -42,6 +45,8 @@
     <string name="sell">Sell</string>
     <string name="delete">Delete</string>
     <string name="edit_habit">Edit Item</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
