--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,12 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="check_detail">Check Detail</string>
+    <string name="habit_attr1">Habits</string>
+    <string name="habit_attr2">History</string>
+    <string name="habit_attr3">List</string>
+    <string name="habit_history">Habit History</string>
+    <string name="check_list">Check habit list</string>
+
 
 
 </resources>
