Add main page textView before viewing habit list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,8 @@
     <string name="about_us">About us</string>
     <string name="user_guide_menu">Get help</string>
 
+    <string name="viewList">To view your habits history, please click button on different categories</string>
+
 
 
 </resources>
