--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,7 @@
     <string name="about_us">About us</string>
     <string name="user_guide_menu">Get help</string>
 
-    <string name="viewList">\n\n\nTo view your habits history, please click button on different categories</string>
+    <string name="viewList">\nTo view your habits history, please click button on different categories</string>
 
 
 
